@startuml PhishNet Database Schema

skinparam linetype ortho
skinparam roundcorner 10
skinparam shadowing false

entity "Victims" {
  * **VictimID** : INT <<PK>>
  --
  * Name : VARCHAR(100)
  * ContactEmail : VARCHAR(100)
  * PasswordHash : VARCHAR(255)
  * AccountStatus : ENUM
  * DateCreated : DATETIME
}

entity "Perpetrators" {
  * **PerpetratorID** : INT <<PK>>
  --
  * Identifier : VARCHAR(255)
  * IdentifierType : ENUM
  * AssociatedName : VARCHAR(100)
  * ThreatLevel : ENUM
  * LastIncidentDate : DATETIME
}

entity "AttackTypes" {
  * **AttackTypeID** : INT <<PK>>
  --
  * AttackName : VARCHAR(100)
  * Description : TEXT
  * SeverityLevel : ENUM
}

entity "Administrators" {
  * **AdminID** : INT <<PK>>
  --
  * Name : VARCHAR(100)
  * Role : ENUM
  * ContactEmail : VARCHAR(100)
  * PasswordHash : VARCHAR(255)
  * DateAssigned : DATETIME
}

entity "IncidentReports" {
  * **IncidentID** : INT <<PK>>
  * **VictimID** : INT <<FK>>
  * **PerpetratorID** : INT <<FK>>
  * **AttackTypeID** : INT <<FK>>
  * AdminID : INT <<FK>>
  --
  * DateReported : DATETIME
  * Description : TEXT
  * Status : ENUM
}

entity "EvidenceUpload" {
  * **EvidenceID** : INT <<PK>>
  * **IncidentID** : INT <<FK>>
  * AdminID : INT <<FK>>
  --
  * EvidenceType : ENUM
  * FilePath : VARCHAR(255)
  * SubmissionDate : DATETIME
  * VerifiedStatus : ENUM
}

entity "ThreatLevelLog" {
  * **LogID** : INT <<PK>>
  * **PerpetratorID** : INT <<FK>>
  * AdminID : INT <<FK>>
  --
  * OldThreatLevel : ENUM
  * NewThreatLevel : ENUM
  * ChangeDate : DATETIME
}

entity "VictimStatusLog" {
  * **LogID** : INT <<PK>>
  * **VictimID** : INT <<FK>>
  * AdminID : INT <<FK>>
  --
  * OldStatus : ENUM
  * NewStatus : ENUM
  * ChangeDate : DATETIME
}

' Relationships with cardinality
Victims ||--o{ IncidentReports : "1..*"
Perpetrators ||--o{ IncidentReports : "1..*"
AttackTypes ||--o{ IncidentReports : "1..*"
Administrators ||--o| IncidentReports : "0..1"
Administrators ||--o{ EvidenceUpload : "0..1"
Administrators ||--o{ ThreatLevelLog : "0..1"
Administrators ||--o{ VictimStatusLog : "0..1"
IncidentReports ||--o{ EvidenceUpload : "1..*"
Perpetrators ||--o{ ThreatLevelLog : "1..*"
Victims ||--o{ VictimStatusLog : "1..*"

@enduml

